# app/Http/Resources/Cars/CarsResource.php
@@ -14,6 +14,12 @@ class CarsResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return [
+            'id' => $this->id,
+            'prod' => $this->prod,
+            'mark' => $this->mark,
+            'model' => $this->model,
+            'year' => $this->year,
+        ];
     }
 }
